--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,17 @@ html
   head
     title #{title}
     link(rel='stylesheet', href='/stylesheets/style.css')
+  script(src = 'https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
   h1 #{title}
+  script.
+    $(document).ready(function(){
+      $("input").focus(function(){
+        $(this).css("background-color", "#cccccc");
+      });
+      $("input").blur(function(){
+        $(this).css("background-color", "#ffffff");
+      });
+    });
   body
     form(action='http://127.0.0.1:8080/login', method='POST')
       | User Name: 
