Encode password when user input password on web page

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,10 +19,10 @@ html
   body
     form(action='http://127.0.0.1:8080/login', method='POST')
       | User Name: 
-      input(tpye='text', name='username')
+      input(type='text', name='username')
       br
       |                 Password: 
-      input(tpye='password', name='pwd')
+      input(type='password', name='pwd')
       br
       input(type='submit', ,='', value='Sign In')
     form(action='http://127.0.0.1:8080/signup', method='GET')
