--- a/views/pagination.pug
+++ b/views/pagination.pug
@@ -1,9 +1,9 @@
 doctype html
 html
   head
-    link(rel='stylesheet', type='text/css', href='/stylesheets/pagination.css')
+    link(rel='stylesheet', type='text/css', href='/css/pagination.min.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
-    script(src='pagination.js')
+    script(src='/js/pagination.min.js')
   body
     #paginate
     #page_navigation
